new: Product CRUD
