# docs/swagger.yaml
@@ -6,7 +6,7 @@ definitions:
         example: 400
         type: integer
       error:
-        example: Invalid request payload or query parameters
+        example: Invalid request body or query parameters
         type: string
     type: object
   httputil.HTTPError404:
@@ -85,6 +85,30 @@ definitions:
         type: string
       userReference:
         example: "12345"
+        type: string
+    type: object
+  model.Product:
+    properties:
+      amount:
+        example: 5000
+        type: number
+      currency:
+        example: USD
+        maxLength: 3
+        minLength: 3
+        type: string
+      description:
+        example: Curso de Programacion
+        maxLength: 100
+        minLength: 6
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: programacion en C
+        maxLength: 100
+        minLength: 6
         type: string
     type: object
 host: localhost:8080
@@ -317,6 +341,124 @@ paths:
       summary: Updates Payer
       tags:
       - payer
+  /product/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get one Product from ID
+      parameters:
+      - description: 'example: 1'
+        in: query
+        name: int
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Product'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError500'
+      summary: Select Product
+      tags:
+      - product
+  /product/new:
+    post:
+      consumes:
+      - application/json
+      description: save Product in database
+      parameters:
+      - description: Product example
+        in: body
+        name: example
+        required: true
+        schema:
+          $ref: '#/definitions/model.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Product'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError500'
+      summary: Insert Product
+      tags:
+      - product
+  /product/products:
+    get:
+      consumes:
+      - application/json
+      description: Select all Products
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Product'
+            type: array
+      summary: Select all Products
+      tags:
+      - product
+  /product/update:
+    put:
+      consumes:
+      - application/json
+      description: Updates a Product in database (id req)
+      parameters:
+      - description: Product example
+        in: body
+        name: example
+        required: true
+        schema:
+          $ref: '#/definitions/model.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Product'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError500'
+      summary: Updates Product
+      tags:
+      - product
 securityDefinitions:
   ApiKeyAuth:
     description: Description for what is this security definition being used
